testsuite/tests/module/mod98.hs
-- !!! Type signature for qualified name
module M where
M.x :: Char
x = 'a'
